FIX: Added text-overflow to the name of the restaurant.

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,9 @@ nav h1 a {
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 #restaurants-list p {
   margin: 0;
